@@ -19,6 +19,8 @@ linotp (3.1~0dev-0) experimental; urgency=low
 
   Breaking changes:
   * No longer support AUDIT_POOL_RECYCLE configuration setting.
+  * Sqlite audit databases can no longer share the same file with LinOTP. If configured
+    to share the same file, LinOTP will add a suffix to the audit database file name.
 
   Fixes:
   * mOTP tokens can now be used in challenge response mode
